--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,15 @@
-.topnav {
+ .topnav {
     background-color: #333;
     overflow: hidden; /*what is this overflow and hidden>*/
 }
+
+
+#aboutme > h2 {
+background-color: red ;
+}
+
+
+
 
 .topnav a {
     float: right;
@@ -14,11 +22,15 @@
 
 .pageheader {
     padding: 30px;
-    text-align: left;
+    /* text-align: left; */
     background: blue;
     color: black;
     font-size: 30px;
 }
+/*body {
+    background-image: url("https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg");
+    background-color: #cccccc;
+   } /*adjust where it is???? and should I?*/
 
 h1,h2,h3 {
     padding: 30px;
