--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(190, 188, 188);
+    background-color: rgb(131, 152, 170);
 } 
 
 
@@ -15,60 +15,82 @@ body {
 header {  
     height: 100px;
     width: 100%;
-    background-color: rgb(114, 114, 114);
-    
-    
+    /* background-color: rgb(103, 110, 121); */
 }  
-
-#subtitle {
-    color: black;
-    text-align: right;
-    padding: 50px 20px; /*better way to center from the top then just adding padding*/
-    font-size: 40px;
+.avatar {  
+    position: absolute;
+    max-height: auto;
+    max-width: 25%;
+    overflow: auto; 
 }
+
 h1 { 
     height: 100px;
     width: 100%;
-    background: rgb(82, 82, 83);
+    color: black;
+    background-color: rgb(103, 110, 121);
     padding: 20px 20px 20px 20px;
 }
 
-/* h2 { 
-    color: white; 
+.round { 
+    border-radius: 200px;
+    max-height: 100%;
+    max-width: 100%;
+    min-height:50%;
+    min-width: 120%;
+}
+
+.round:hover { 
+    border: 2px solid;
+    border-color: rgb(43, 226, 217);
+}
+
+h2 { 
+    color: rgb(34, 33, 33);
     text-align: center; 
     padding: 50px 50px; 
     text-decoration: underline; 
-    font-size: 50px; 
-}*/
+    font-size: 45px; 
+}
 
 
 
 #aboutme {
-background-color: lightblue ;
-padding: 50px; 
+    background-color: rgb(103, 110, 121) ;
+    /* padding: 50px;  */
 }
 
 
-
-
-
-
-/* #horesion {  
-    float: center; doesnt work
-    width: 50%;
-    padding: 5px;
+#work {
+    color: rgb(206, 199, 199);
+    display: flex;
+    /* justify-content: flex-end; */
+    background-color: rgb(103, 110, 121) ;
+    /* text-align: center;  */
+    padding: 80px 80px; 
+    text-decoration: underline; 
+    font-size: 35px
 }
 
-a {
-    color:red;
+
+#horesion {  
+    /* align: auto; */
+    width: 100%;
+    height: 100px;
+    
 }
 
 #myPortfolio { 
-    align: center; doesnt work
-    width: 50%;
-    padding: 5px;
-} */
+    /* align: auto; */
+    width: 100%;
+    height: 100px;
+    /* padding: 80px 80px 80px;  */
+}
 
+
+a:hover {
+    color:rgb(43, 226, 217);
+}
 
 
 footer {
